--- a/eventos1.html
+++ b/eventos1.html
@@ -72,8 +72,8 @@
 
   <main class="main-content">
     <header class="main-header">
-      <h1>Eventos</h1>
-      <p class="subtitle">Encontre e reserve vagas nos principais Eventos.</p>
+      <h1>Aeroportos</h1>
+      <p class="subtitle">Encontre e reserve vagas nos principais Aeroportos.</p>
 
       <div class="results-info">
         <span id="resultsCount"> </span>
@@ -83,162 +83,164 @@
 
 <section class="events-grid" id="eventsGrid">
 
-  <!-- 🔵 SKELETON LOADING (Mostrado antes de carregar os eventos reais) -->
-  <div id="cardsContainer" class="cards-grid">
+ <div class="real-events">
 
-
-
-  <!-- 🔥 EVENTOS REAIS (ficam ocultos até o JS remover o skeleton) -->
-  <div class="real-events">
-
-  <!-- SÃO PAULO – EVENTO 1 -->
+  <!-- SÃO PAULO – AEROPORTO 1 -->
   <a href="ex.html" class="card"
-     data-city="sp" data-type="show"
-     data-start="2025-12-16" data-end="2025-12-16"
-     data-event-id="2001" data-local-id="32">
+     data-city="sp" data-type="aeroporto"
+     data-start="2025-12-16" data-end=""
+     data-event-id="3001" data-local-id="sp01">
 
     <div class="img-container">
-      <img src="https://picsum.photos/640/400?random=21" alt="Pierce The Veil">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/9/9f/Guarulhos_International_Airport_T3.jpg"
+           alt="Aeroporto Internacional de Guarulhos">
     </div>
 
     <div class="info">
-      <h3>Pierce The Veil – I Can’t Hear You Tour</h3>
+      <h3>Aeroporto Internacional de Guarulhos (GRU)</h3>
       <p class="date">
-        <span class="material-icons">event</span>
-        16/12/2025 • São Paulo
+        <span class="material-icons">flight</span>
+        São Paulo • Guarulhos
       </p>
     </div>
   </a>
 
-  <!-- SÃO PAULO – EVENTO 2 -->
+  <!-- SÃO PAULO – AEROPORTO 2 -->
   <a href="ex.html" class="card"
-     data-city="sp" data-type="show"
-     data-start="2025-12-17" data-end="2025-12-17"
-     data-event-id="2002" data-local-id="32">
+     data-city="sp" data-type="aeroporto"
+     data-start="2025-12-16" data-end=""
+     data-event-id="3002" data-local-id="sp02">
 
     <div class="img-container">
-      <img src="https://picsum.photos/640/400?random=22" alt="WME Awards 2025">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/2/2d/Aeroporto_de_Congonhas.jpg"
+           alt="Aeroporto de Congonhas">
     </div>
 
     <div class="info">
-      <h3>WME Awards 2025</h3>
+      <h3>Aeroporto de Congonhas (CGH)</h3>
       <p class="date">
-        <span class="material-icons">event</span>
-        17/12/2025 • São Paulo
+        <span class="material-icons">flight</span>
+        São Paulo • Zona Sul
       </p>
     </div>
   </a>
 
-  <!-- RIO DE JANEIRO – EVENTO 1 -->
+  <!-- RIO DE JANEIRO – AEROPORTO 1 -->
   <a href="ex.html" class="card"
-     data-city="rj" data-type="show"
-     data-start="2025-12-27" data-end="2025-12-27"
-     data-event-id="2003" data-local-id="77">
+     data-city="rj" data-type="aeroporto"
+     data-start="2025-12-16" data-end=""
+     data-event-id="3003" data-local-id="rj01">
 
     <div class="img-container">
-      <img src="https://picsum.photos/640/400?random=23" alt="Festival de Verão RJ">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/3/3b/Galeao_airport_terminal_2.jpg"
+           alt="Aeroporto Internacional do Galeão">
     </div>
 
     <div class="info">
-      <h3>Festival de Verão – Rio</h3>
+      <h3>Aeroporto Internacional do Galeão (GIG)</h3>
       <p class="date">
-        <span class="material-icons">event</span>
-        27/12/2025 • Rio de Janeiro
+        <span class="material-icons">flight</span>
+        Rio de Janeiro • Ilha do Governador
       </p>
     </div>
   </a>
 
-  <!-- RIO DE JANEIRO – EVENTO 2 -->
+  <!-- RIO DE JANEIRO – AEROPORTO 2 -->
   <a href="ex.html" class="card"
-     data-city="rj" data-type="show"
-     data-start="2025-12-31" data-end="2025-12-31"
-     data-event-id="2004" data-local-id="77">
+     data-city="rj" data-type="aeroporto"
+     data-start="2025-12-16" data-end=""
+     data-event-id="3004" data-local-id="rj02">
 
     <div class="img-container">
-      <img src="https://picsum.photos/640/400?random=24" alt="Réveillon Copacabana">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/6/6f/Aeroporto_Santos_Dumont_RJ.jpg"
+           alt="Aeroporto Santos Dumont">
     </div>
 
     <div class="info">
-      <h3>Réveillon de Copacabana</h3>
+      <h3>Aeroporto Santos Dumont (SDU)</h3>
       <p class="date">
-        <span class="material-icons">event</span>
-        31/12/2025 • Rio de Janeiro
+        <span class="material-icons">flight</span>
+        Rio de Janeiro • Centro
       </p>
     </div>
   </a>
 
-  <!-- BELO HORIZONTE – EVENTO 1 -->
+  <!-- BELO HORIZONTE – AEROPORTO 1 -->
   <a href="ex.html" class="card"
-     data-city="bh" data-type="show"
-     data-start="2025-12-17" data-end="2025-12-17"
-     data-event-id="2005" data-local-id="55">
+     data-city="bh" data-type="aeroporto"
+     data-start="2025-12-16" data-end=""
+     data-event-id="3005" data-local-id="bh01">
 
     <div class="img-container">
-      <img src="https://picsum.photos/640/400?random=25" alt="Samba Prime 2025">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/0/0b/Aeroporto_Internacional_de_Confins.jpg"
+           alt="Aeroporto Internacional de Confins">
     </div>
 
     <div class="info">
-      <h3>Samba Prime 2025</h3>
+      <h3>Aeroporto Internacional de Confins (CNF)</h3>
       <p class="date">
-        <span class="material-icons">event</span>
-        17/12/2025 • Belo Horizonte
+        <span class="material-icons">flight</span>
+        Belo Horizonte • Confins
       </p>
     </div>
   </a>
 
-  <!-- BELO HORIZONTE – EVENTO 2 -->
+  <!-- BELO HORIZONTE – AEROPORTO 2 -->
   <a href="ex.html" class="card"
-     data-city="bh" data-type="exposicao"
-     data-start="2025-12-18" data-end="2025-12-18"
-     data-event-id="2006" data-local-id="55">
+     data-city="bh" data-type="aeroporto"
+     data-start="2025-12-16" data-end=""
+     data-event-id="3006" data-local-id="bh02">
 
-    <div class="img-container"
-      <img src="https://picsum.photos/640/400?random=26" alt="Expovet 2025">
+    <div class="img-container">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/4/4f/Aeroporto_da_Pampulha.jpg"
+           alt="Aeroporto da Pampulha">
     </div>
 
     <div class="info">
-      <h3>Expovet 2025</h3>
+      <h3>Aeroporto da Pampulha (PLU)</h3>
       <p class="date">
-        <span class="material-icons">event</span>
-        18/12/2025 • Belo Horizonte
+        <span class="material-icons">flight</span>
+        Belo Horizonte • Pampulha
       </p>
     </div>
   </a>
 
-  <!-- CURITIBA – EVENTO 1 -->
+  <!-- CURITIBA – AEROPORTO 1 -->
   <a href="ex.html" class="card"
-     data-city="cur" data-type="show"
-     data-start="2025-12-16" data-end="2025-12-23"
-     data-event-id="2007" data-local-id="90">
+     data-city="cur" data-type="aeroporto"
+     data-start="2025-12-16" data-end=""
+     data-event-id="3007" data-local-id="cur01">
 
     <div class="img-container">
-      <img src="https://picsum.photos/640/400?random=27" alt="Disney Celebra Natal">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/5/5b/Aeroporto_Afonso_Pena.jpg"
+           alt="Aeroporto Internacional Afonso Pena">
     </div>
 
     <div class="info">
-      <h3>Disney Celebra: Um Natal Inesquecível</h3>
+      <h3>Aeroporto Internacional Afonso Pena (CWB)</h3>
       <p class="date">
-        <span class="material-icons">event</span>
-        16 a 23/12/2025 • Curitiba
+        <span class="material-icons">flight</span>
+        Curitiba • São José dos Pinhais
       </p>
     </div>
   </a>
 
-  <!-- CURITIBA – EVENTO 2 -->
+  <!-- CURITIBA – AEROPORTO 2 -->
   <a href="ex.html" class="card"
-     data-city="cur" data-type="show"
-     data-start="2025-12-20" data-end="2025-12-20"
-     data-event-id="2008" data-local-id="90">
+     data-city="cur" data-type="aeroporto"
+     data-start="2025-12-16" data-end=""
+     data-event-id="3008" data-local-id="cur02">
 
     <div class="img-container">
-      <img src="https://picsum.photos/640/400?random=28" alt="Boris Brejcha">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/8/8e/Aeroporto_do_Bacacheri.jpg"
+           alt="Aeroporto do Bacacheri">
     </div>
 
     <div class="info">
-      <h3>Boris Brejcha – Reflections Tour</h3>
+      <h3>Aeroporto do Bacacheri (BFH)</h3>
       <p class="date">
-        <span class="material-icons">event</span>
-        20/12/2025 • Curitiba
+        <span class="material-icons">flight</span>
+        Curitiba • Bacacheri
       </p>
     </div>
   </a>
