--- a/eventos2.html
+++ b/eventos2.html
@@ -72,8 +72,8 @@
 
   <main class="main-content">
     <header class="main-header">
-      <h1>Eventos</h1>
-      <p class="subtitle">Encontre e reserve vagas nos principais Eventos.</p>
+      <h1>Parques</h1>
+      <p class="subtitle">Encontre e reserve vagas nos principais Parques.</p>
 
       <div class="results-info">
         <span id="resultsCount"> </span>
@@ -84,161 +84,164 @@
 <section class="events-grid" id="eventsGrid">
 
   <!-- 🔵 SKELETON LOADING (Mostrado antes de carregar os eventos reais) -->
-  <div id="cardsContainer" class="cards-grid">
-
-
-
-  <!-- 🔥 EVENTOS REAIS (ficam ocultos até o JS remover o skeleton) -->
   <div class="real-events">
 
-  <!-- SÃO PAULO – EVENTO 1 -->
+  <!-- SÃO PAULO – PARQUE 1 -->
   <a href="ex.html" class="card"
-     data-city="sp" data-type="show"
-     data-start="2025-12-16" data-end="2025-12-16"
-     data-event-id="2001" data-local-id="32">
+     data-city="sp" data-type="parque"
+     data-start="2025-12-16" data-end=""
+     data-event-id="2001" data-local-id="sp01">
 
     <div class="img-container">
-      <img src="https://picsum.photos/640/400?random=21" alt="Pierce The Veil">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/6/6d/Parque_Ibirapuera_SP.jpg"
+           alt="Parque Ibirapuera">
     </div>
 
     <div class="info">
-      <h3>Pierce The Veil – I Can’t Hear You Tour</h3>
+      <h3>Parque Ibirapuera</h3>
       <p class="date">
-        <span class="material-icons">event</span>
-        16/12/2025 • São Paulo
+        <span class="material-icons">park</span>
+        São Paulo • Zona Sul
       </p>
     </div>
   </a>
 
-  <!-- SÃO PAULO – EVENTO 2 -->
+  <!-- SÃO PAULO – PARQUE 2 -->
   <a href="ex.html" class="card"
-     data-city="sp" data-type="show"
-     data-start="2025-12-17" data-end="2025-12-17"
-     data-event-id="2002" data-local-id="32">
+     data-city="sp" data-type="parque"
+     data-start="2025-12-16" data-end=""
+     data-event-id="2002" data-local-id="sp02">
 
     <div class="img-container">
-      <img src="https://picsum.photos/640/400?random=22" alt="WME Awards 2025">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/4/4f/Parque_Villa-Lobos_SP.jpg"
+           alt="Parque Villa-Lobos">
     </div>
 
     <div class="info">
-      <h3>WME Awards 2025</h3>
+      <h3>Parque Villa-Lobos</h3>
       <p class="date">
-        <span class="material-icons">event</span>
-        17/12/2025 • São Paulo
+        <span class="material-icons">park</span>
+        São Paulo • Zona Oeste
       </p>
     </div>
   </a>
 
-  <!-- RIO DE JANEIRO – EVENTO 1 -->
+  <!-- RIO DE JANEIRO – PARQUE 1 -->
   <a href="ex.html" class="card"
-     data-city="rj" data-type="show"
-     data-start="2025-12-27" data-end="2025-12-27"
-     data-event-id="2003" data-local-id="77">
+     data-city="rj" data-type="parque"
+     data-start="2025-12-16" data-end=""
+     data-event-id="2003" data-local-id="rj01">
 
     <div class="img-container">
-      <img src="https://picsum.photos/640/400?random=23" alt="Festival de Verão RJ">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/5/5d/Parque_do_Flamengo_RJ.jpg"
+           alt="Parque do Flamengo">
     </div>
 
     <div class="info">
-      <h3>Festival de Verão – Rio</h3>
+      <h3>Parque do Flamengo</h3>
       <p class="date">
-        <span class="material-icons">event</span>
-        27/12/2025 • Rio de Janeiro
+        <span class="material-icons">park</span>
+        Rio de Janeiro • Aterro
       </p>
     </div>
   </a>
 
-  <!-- RIO DE JANEIRO – EVENTO 2 -->
+  <!-- RIO DE JANEIRO – PARQUE 2 -->
   <a href="ex.html" class="card"
-     data-city="rj" data-type="show"
-     data-start="2025-12-31" data-end="2025-12-31"
-     data-event-id="2004" data-local-id="77">
+     data-city="rj" data-type="parque"
+     data-start="2025-12-16" data-end=""
+     data-event-id="2004" data-local-id="rj02">
 
     <div class="img-container">
-      <img src="https://picsum.photos/640/400?random=24" alt="Réveillon Copacabana">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/3/3e/Parque_Nacional_da_Tijuca.jpg"
+           alt="Parque Nacional da Tijuca">
     </div>
 
     <div class="info">
-      <h3>Réveillon de Copacabana</h3>
+      <h3>Parque Nacional da Tijuca</h3>
       <p class="date">
-        <span class="material-icons">event</span>
-        31/12/2025 • Rio de Janeiro
+        <span class="material-icons">park</span>
+        Rio de Janeiro • Floresta
       </p>
     </div>
   </a>
 
-  <!-- BELO HORIZONTE – EVENTO 1 -->
+  <!-- BELO HORIZONTE – PARQUE 1 -->
   <a href="ex.html" class="card"
-     data-city="bh" data-type="show"
-     data-start="2025-12-17" data-end="2025-12-17"
-     data-event-id="2005" data-local-id="55">
+     data-city="bh" data-type="parque"
+     data-start="2025-12-16" data-end=""
+     data-event-id="2005" data-local-id="bh01">
 
     <div class="img-container">
-      <img src="https://picsum.photos/640/400?random=25" alt="Samba Prime 2025">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/9/9c/Parque_das_Mangabeiras_BH.jpg"
+           alt="Parque das Mangabeiras">
     </div>
 
     <div class="info">
-      <h3>Samba Prime 2025</h3>
+      <h3>Parque das Mangabeiras</h3>
       <p class="date">
-        <span class="material-icons">event</span>
-        17/12/2025 • Belo Horizonte
+        <span class="material-icons">park</span>
+        Belo Horizonte • Mangabeiras
       </p>
     </div>
   </a>
 
-  <!-- BELO HORIZONTE – EVENTO 2 -->
+  <!-- BELO HORIZONTE – PARQUE 2 -->
   <a href="ex.html" class="card"
-     data-city="bh" data-type="exposicao"
-     data-start="2025-12-18" data-end="2025-12-18"
-     data-event-id="2006" data-local-id="55">
+     data-city="bh" data-type="parque"
+     data-start="2025-12-16" data-end=""
+     data-event-id="2006" data-local-id="bh02">
 
-    <div class="img-container"
-      <img src="https://picsum.photos/640/400?random=26" alt="Expovet 2025">
+    <div class="img-container">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/2/27/Parque_Municipal_BH.jpg"
+           alt="Parque Municipal Américo Renné Giannetti">
     </div>
 
     <div class="info">
-      <h3>Expovet 2025</h3>
+      <h3>Parque Municipal Américo Renné Giannetti</h3>
       <p class="date">
-        <span class="material-icons">event</span>
-        18/12/2025 • Belo Horizonte
+        <span class="material-icons">park</span>
+        Belo Horizonte • Centro
       </p>
     </div>
   </a>
 
-  <!-- CURITIBA – EVENTO 1 -->
+  <!-- CURITIBA – PARQUE 1 -->
   <a href="ex.html" class="card"
-     data-city="cur" data-type="show"
-     data-start="2025-12-16" data-end="2025-12-23"
-     data-event-id="2007" data-local-id="90">
+     data-city="cur" data-type="parque"
+     data-start="2025-12-16" data-end=""
+     data-event-id="2007" data-local-id="cur01">
 
     <div class="img-container">
-      <img src="https://picsum.photos/640/400?random=27" alt="Disney Celebra Natal">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/6/6a/Parque_Barigui_Curitiba.jpg"
+           alt="Parque Barigui">
     </div>
 
     <div class="info">
-      <h3>Disney Celebra: Um Natal Inesquecível</h3>
+      <h3>Parque Barigui</h3>
       <p class="date">
-        <span class="material-icons">event</span>
-        16 a 23/12/2025 • Curitiba
+        <span class="material-icons">park</span>
+        Curitiba • Barigui
       </p>
     </div>
   </a>
 
-  <!-- CURITIBA – EVENTO 2 -->
+  <!-- CURITIBA – PARQUE 2 -->
   <a href="ex.html" class="card"
-     data-city="cur" data-type="show"
-     data-start="2025-12-20" data-end="2025-12-20"
-     data-event-id="2008" data-local-id="90">
+     data-city="cur" data-type="parque"
+     data-start="2025-12-16" data-end=""
+     data-event-id="2008" data-local-id="cur02">
 
     <div class="img-container">
-      <img src="https://picsum.photos/640/400?random=28" alt="Boris Brejcha">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/4/42/Parque_Tangua_Curitiba.jpg"
+           alt="Parque Tanguá">
     </div>
 
     <div class="info">
-      <h3>Boris Brejcha – Reflections Tour</h3>
+      <h3>Parque Tanguá</h3>
       <p class="date">
-        <span class="material-icons">event</span>
-        20/12/2025 • Curitiba
+        <span class="material-icons">park</span>
+        Curitiba • Tanguá
       </p>
     </div>
   </a>
