--- a/eventos3.html
+++ b/eventos3.html
@@ -72,8 +72,8 @@
 
   <main class="main-content">
     <header class="main-header">
-      <h1>Eventos</h1>
-      <p class="subtitle">Encontre e reserve vagas nos principais Eventos.</p>
+      <h1>Shopping´s</h1>
+      <p class="subtitle">Encontre e reserve vagas nos principais Shopping´s.</p>
 
       <div class="results-info">
         <span id="resultsCount"> </span>
@@ -84,166 +84,170 @@
 <section class="events-grid" id="eventsGrid">
 
   <!-- 🔵 SKELETON LOADING (Mostrado antes de carregar os eventos reais) -->
-  <div id="cardsContainer" class="cards-grid">
+ <div class="real-events">
 
-
-
-  <!-- 🔥 EVENTOS REAIS (ficam ocultos até o JS remover o skeleton) -->
-  <div class="real-events">
-
-  <!-- SÃO PAULO – EVENTO 1 -->
+  <!-- SÃO PAULO – SHOPPING 1 -->
   <a href="ex.html" class="card"
-     data-city="sp" data-type="show"
-     data-start="2025-12-16" data-end="2025-12-16"
-     data-event-id="2001" data-local-id="32">
+     data-city="sp" data-type="shopping"
+     data-start="2025-12-16" data-end=""
+     data-event-id="4001" data-local-id="sp-shop-01">
 
     <div class="img-container">
-      <img src="https://picsum.photos/640/400?random=21" alt="Pierce The Veil">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/6/6a/Shopping_Ibirapuera_SP.jpg"
+           alt="Shopping Ibirapuera">
     </div>
 
     <div class="info">
-      <h3>Pierce The Veil – I Can’t Hear You Tour</h3>
+      <h3>Shopping Ibirapuera</h3>
       <p class="date">
-        <span class="material-icons">event</span>
-        16/12/2025 • São Paulo
+        <span class="material-icons">shopping_bag</span>
+        São Paulo • Moema
       </p>
     </div>
   </a>
 
-  <!-- SÃO PAULO – EVENTO 2 -->
+  <!-- SÃO PAULO – SHOPPING 2 -->
   <a href="ex.html" class="card"
-     data-city="sp" data-type="show"
-     data-start="2025-12-17" data-end="2025-12-17"
-     data-event-id="2002" data-local-id="32">
+     data-city="sp" data-type="shopping"
+     data-start="2025-12-16" data-end=""
+     data-event-id="4002" data-local-id="sp-shop-02">
 
     <div class="img-container">
-      <img src="https://picsum.photos/640/400?random=22" alt="WME Awards 2025">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/5/5b/Shopping_Morumbi_SP.jpg"
+           alt="Shopping Morumbi">
     </div>
 
     <div class="info">
-      <h3>WME Awards 2025</h3>
+      <h3>Shopping Morumbi</h3>
       <p class="date">
-        <span class="material-icons">event</span>
-        17/12/2025 • São Paulo
+        <span class="material-icons">shopping_bag</span>
+        São Paulo • Zona Sul
       </p>
     </div>
   </a>
 
-  <!-- RIO DE JANEIRO – EVENTO 1 -->
+  <!-- RIO DE JANEIRO – SHOPPING 1 -->
   <a href="ex.html" class="card"
-     data-city="rj" data-type="show"
-     data-start="2025-12-27" data-end="2025-12-27"
-     data-event-id="2003" data-local-id="77">
+     data-city="rj" data-type="shopping"
+     data-start="2025-12-16" data-end=""
+     data-event-id="4003" data-local-id="rj-shop-01">
 
     <div class="img-container">
-      <img src="https://picsum.photos/640/400?random=23" alt="Festival de Verão RJ">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/1/16/Shopping_Rio_Sul.jpg"
+           alt="Shopping Rio Sul">
     </div>
 
     <div class="info">
-      <h3>Festival de Verão – Rio</h3>
+      <h3>Shopping Rio Sul</h3>
       <p class="date">
-        <span class="material-icons">event</span>
-        27/12/2025 • Rio de Janeiro
+        <span class="material-icons">shopping_bag</span>
+        Rio de Janeiro • Botafogo
       </p>
     </div>
   </a>
 
-  <!-- RIO DE JANEIRO – EVENTO 2 -->
+  <!-- RIO DE JANEIRO – SHOPPING 2 -->
   <a href="ex.html" class="card"
-     data-city="rj" data-type="show"
-     data-start="2025-12-31" data-end="2025-12-31"
-     data-event-id="2004" data-local-id="77">
+     data-city="rj" data-type="shopping"
+     data-start="2025-12-16" data-end=""
+     data-event-id="4004" data-local-id="rj-shop-02">
 
     <div class="img-container">
-      <img src="https://picsum.photos/640/400?random=24" alt="Réveillon Copacabana">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/4/44/Barra_Shopping_RJ.jpg"
+           alt="Barra Shopping">
     </div>
 
     <div class="info">
-      <h3>Réveillon de Copacabana</h3>
+      <h3>Barra Shopping</h3>
       <p class="date">
-        <span class="material-icons">event</span>
-        31/12/2025 • Rio de Janeiro
+        <span class="material-icons">shopping_bag</span>
+        Rio de Janeiro • Barra da Tijuca
       </p>
     </div>
   </a>
 
-  <!-- BELO HORIZONTE – EVENTO 1 -->
+  <!-- BELO HORIZONTE – SHOPPING 1 -->
   <a href="ex.html" class="card"
-     data-city="bh" data-type="show"
-     data-start="2025-12-17" data-end="2025-12-17"
-     data-event-id="2005" data-local-id="55">
+     data-city="bh" data-type="shopping"
+     data-start="2025-12-16" data-end=""
+     data-event-id="4005" data-local-id="bh-shop-01">
 
     <div class="img-container">
-      <img src="https://picsum.photos/640/400?random=25" alt="Samba Prime 2025">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/3/34/Shopping_Del_Rey_BH.jpg"
+           alt="Shopping Del Rey">
     </div>
 
     <div class="info">
-      <h3>Samba Prime 2025</h3>
+      <h3>Shopping Del Rey</h3>
       <p class="date">
-        <span class="material-icons">event</span>
-        17/12/2025 • Belo Horizonte
+        <span class="material-icons">shopping_bag</span>
+        Belo Horizonte • Pampulha
       </p>
     </div>
   </a>
 
-  <!-- BELO HORIZONTE – EVENTO 2 -->
+  <!-- BELO HORIZONTE – SHOPPING 2 -->
   <a href="ex.html" class="card"
-     data-city="bh" data-type="exposicao"
-     data-start="2025-12-18" data-end="2025-12-18"
-     data-event-id="2006" data-local-id="55">
+     data-city="bh" data-type="shopping"
+     data-start="2025-12-16" data-end=""
+     data-event-id="4006" data-local-id="bh-shop-02">
 
-    <div class="img-container"
-      <img src="https://picsum.photos/640/400?random=26" alt="Expovet 2025">
+    <div class="img-container">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/7/7a/P%C3%A1tio_Savassi_BH.jpg"
+           alt="Pátio Savassi">
     </div>
 
     <div class="info">
-      <h3>Expovet 2025</h3>
+      <h3>Pátio Savassi</h3>
       <p class="date">
-        <span class="material-icons">event</span>
-        18/12/2025 • Belo Horizonte
+        <span class="material-icons">shopping_bag</span>
+        Belo Horizonte • Savassi
       </p>
     </div>
   </a>
 
-  <!-- CURITIBA – EVENTO 1 -->
+  <!-- CURITIBA – SHOPPING 1 -->
   <a href="ex.html" class="card"
-     data-city="cur" data-type="show"
-     data-start="2025-12-16" data-end="2025-12-23"
-     data-event-id="2007" data-local-id="90">
+     data-city="cur" data-type="shopping"
+     data-start="2025-12-16" data-end=""
+     data-event-id="4007" data-local-id="cur-shop-01">
 
     <div class="img-container">
-      <img src="https://picsum.photos/640/400?random=27" alt="Disney Celebra Natal">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/2/2e/Shopping_Estacao_Curitiba.jpg"
+           alt="Shopping Estação">
     </div>
 
     <div class="info">
-      <h3>Disney Celebra: Um Natal Inesquecível</h3>
+      <h3>Shopping Estação</h3>
       <p class="date">
-        <span class="material-icons">event</span>
-        16 a 23/12/2025 • Curitiba
+        <span class="material-icons">shopping_bag</span>
+        Curitiba • Centro
       </p>
     </div>
   </a>
 
-  <!-- CURITIBA – EVENTO 2 -->
+  <!-- CURITIBA – SHOPPING 2 -->
   <a href="ex.html" class="card"
-     data-city="cur" data-type="show"
-     data-start="2025-12-20" data-end="2025-12-20"
-     data-event-id="2008" data-local-id="90">
+     data-city="cur" data-type="shopping"
+     data-start="2025-12-16" data-end=""
+     data-event-id="4008" data-local-id="cur-shop-02">
 
     <div class="img-container">
-      <img src="https://picsum.photos/640/400?random=28" alt="Boris Brejcha">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/5/55/ParkShoppingBarigui.jpg"
+           alt="ParkShopping Barigüi">
     </div>
 
     <div class="info">
-      <h3>Boris Brejcha – Reflections Tour</h3>
+      <h3>ParkShopping Barigüi</h3>
       <p class="date">
-        <span class="material-icons">event</span>
-        20/12/2025 • Curitiba
+        <span class="material-icons">shopping_bag</span>
+        Curitiba • Mossunguê
       </p>
     </div>
   </a>
 
 </div>
+
 
 
 </section>
