--- a/eventos4.html
+++ b/eventos4.html
@@ -72,8 +72,8 @@
 
   <main class="main-content">
     <header class="main-header">
-      <h1>Eventos</h1>
-      <p class="subtitle">Encontre e reserve vagas nos principais Eventos.</p>
+      <h1>Shows</h1>
+      <p class="subtitle">Encontre e reserve vagas nos principais Shows.</p>
 
       <div class="results-info">
         <span id="resultsCount"> </span>
@@ -84,161 +84,164 @@
 <section class="events-grid" id="eventsGrid">
 
   <!-- 🔵 SKELETON LOADING (Mostrado antes de carregar os eventos reais) -->
-  <div id="cardsContainer" class="cards-grid">
+<div class="real-events">
 
-
-
-  <!-- 🔥 EVENTOS REAIS (ficam ocultos até o JS remover o skeleton) -->
-  <div class="real-events">
-
-  <!-- SÃO PAULO – EVENTO 1 -->
+  <!-- SÃO PAULO – SHOW 1 -->
   <a href="ex.html" class="card"
      data-city="sp" data-type="show"
-     data-start="2025-12-16" data-end="2025-12-16"
-     data-event-id="2001" data-local-id="32">
+     data-start="2026-01-24" data-end="2026-01-24"
+     data-event-id="5001" data-local-id="sp-est-01">
 
     <div class="img-container">
-      <img src="https://picsum.photos/640/400?random=21" alt="Pierce The Veil">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/2/2e/Allianz_Parque_2019.jpg"
+           alt="Show no Allianz Parque">
     </div>
 
     <div class="info">
-      <h3>Pierce The Veil – I Can’t Hear You Tour</h3>
+      <h3>Coldplay – Music of the Spheres Tour</h3>
       <p class="date">
         <span class="material-icons">event</span>
-        16/12/2025 • São Paulo
+        24/01/2026 • Allianz Parque • São Paulo
       </p>
     </div>
   </a>
 
-  <!-- SÃO PAULO – EVENTO 2 -->
+  <!-- SÃO PAULO – SHOW 2 -->
   <a href="ex.html" class="card"
      data-city="sp" data-type="show"
-     data-start="2025-12-17" data-end="2025-12-17"
-     data-event-id="2002" data-local-id="32">
+     data-start="2026-02-08" data-end="2026-02-08"
+     data-event-id="5002" data-local-id="sp-est-02">
 
     <div class="img-container">
-      <img src="https://picsum.photos/640/400?random=22" alt="WME Awards 2025">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/6/6d/Morumbi_Stadium_2022.jpg"
+           alt="Show no Estádio do Morumbi">
     </div>
 
     <div class="info">
-      <h3>WME Awards 2025</h3>
+      <h3>U2 – World Tour 2026</h3>
       <p class="date">
         <span class="material-icons">event</span>
-        17/12/2025 • São Paulo
+        08/02/2026 • Estádio do Morumbi • São Paulo
       </p>
     </div>
   </a>
 
-  <!-- RIO DE JANEIRO – EVENTO 1 -->
+  <!-- RIO DE JANEIRO – SHOW 1 -->
   <a href="ex.html" class="card"
      data-city="rj" data-type="show"
-     data-start="2025-12-27" data-end="2025-12-27"
-     data-event-id="2003" data-local-id="77">
+     data-start="2026-01-18" data-end="2026-01-18"
+     data-event-id="5003" data-local-id="rj-est-01">
 
     <div class="img-container">
-      <img src="https://picsum.photos/640/400?random=23" alt="Festival de Verão RJ">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/5/56/Estadio_Maracana_Rio.jpg"
+           alt="Show no Maracanã">
     </div>
 
     <div class="info">
-      <h3>Festival de Verão – Rio</h3>
+      <h3>Foo Fighters – Stadium Tour</h3>
       <p class="date">
         <span class="material-icons">event</span>
-        27/12/2025 • Rio de Janeiro
+        18/01/2026 • Maracanã • Rio de Janeiro
       </p>
     </div>
   </a>
 
-  <!-- RIO DE JANEIRO – EVENTO 2 -->
+  <!-- RIO DE JANEIRO – SHOW 2 -->
   <a href="ex.html" class="card"
      data-city="rj" data-type="show"
-     data-start="2025-12-31" data-end="2025-12-31"
-     data-event-id="2004" data-local-id="77">
+     data-start="2026-02-15" data-end="2026-02-15"
+     data-event-id="5004" data-local-id="rj-est-02">
 
     <div class="img-container">
-      <img src="https://picsum.photos/640/400?random=24" alt="Réveillon Copacabana">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/9/95/Engenh%C3%A3o_Rio.jpg"
+           alt="Show no Estádio Nilton Santos">
     </div>
 
     <div class="info">
-      <h3>Réveillon de Copacabana</h3>
+      <h3>Bruno Mars – Live in Brazil</h3>
       <p class="date">
         <span class="material-icons">event</span>
-        31/12/2025 • Rio de Janeiro
+        15/02/2026 • Engenhão • Rio de Janeiro
       </p>
     </div>
   </a>
 
-  <!-- BELO HORIZONTE – EVENTO 1 -->
+  <!-- BELO HORIZONTE – SHOW 1 -->
   <a href="ex.html" class="card"
      data-city="bh" data-type="show"
-     data-start="2025-12-17" data-end="2025-12-17"
-     data-event-id="2005" data-local-id="55">
+     data-start="2026-01-31" data-end="2026-01-31"
+     data-event-id="5005" data-local-id="bh-est-01">
 
     <div class="img-container">
-      <img src="https://picsum.photos/640/400?random=25" alt="Samba Prime 2025">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/4/4b/Mineirao_BH.jpg"
+           alt="Show no Mineirão">
     </div>
 
     <div class="info">
-      <h3>Samba Prime 2025</h3>
+      <h3>Iron Maiden – Legacy of the Beast</h3>
       <p class="date">
         <span class="material-icons">event</span>
-        17/12/2025 • Belo Horizonte
+        31/01/2026 • Mineirão • Belo Horizonte
       </p>
     </div>
   </a>
 
-  <!-- BELO HORIZONTE – EVENTO 2 -->
+  <!-- BELO HORIZONTE – SHOW 2 -->
   <a href="ex.html" class="card"
-     data-city="bh" data-type="exposicao"
-     data-start="2025-12-18" data-end="2025-12-18"
-     data-event-id="2006" data-local-id="55">
-
-    <div class="img-container"
-      <img src="https://picsum.photos/640/400?random=26" alt="Expovet 2025">
-    </div>
-
-    <div class="info">
-      <h3>Expovet 2025</h3>
-      <p class="date">
-        <span class="material-icons">event</span>
-        18/12/2025 • Belo Horizonte
-      </p>
-    </div>
-  </a>
-
-  <!-- CURITIBA – EVENTO 1 -->
-  <a href="ex.html" class="card"
-     data-city="cur" data-type="show"
-     data-start="2025-12-16" data-end="2025-12-23"
-     data-event-id="2007" data-local-id="90">
+     data-city="bh" data-type="show"
+     data-start="2026-02-22" data-end="2026-02-22"
+     data-event-id="5006" data-local-id="bh-est-02">
 
     <div class="img-container">
-      <img src="https://picsum.photos/640/400?random=27" alt="Disney Celebra Natal">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/7/7b/Mineirinho_BH.jpg"
+           alt="Show no Mineirinho">
     </div>
 
     <div class="info">
-      <h3>Disney Celebra: Um Natal Inesquecível</h3>
+      <h3>Ivete Sangalo – Turnê 2026</h3>
       <p class="date">
         <span class="material-icons">event</span>
-        16 a 23/12/2025 • Curitiba
+        22/02/2026 • Mineirinho • Belo Horizonte
       </p>
     </div>
   </a>
 
-  <!-- CURITIBA – EVENTO 2 -->
+  <!-- CURITIBA – SHOW 1 -->
   <a href="ex.html" class="card"
      data-city="cur" data-type="show"
-     data-start="2025-12-20" data-end="2025-12-20"
-     data-event-id="2008" data-local-id="90">
+     data-start="2026-01-25" data-end="2026-01-25"
+     data-event-id="5007" data-local-id="cur-est-01">
 
     <div class="img-container">
-      <img src="https://picsum.photos/640/400?random=28" alt="Boris Brejcha">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/8/88/Arena_da_Baixada_Curitiba.jpg"
+           alt="Show na Arena da Baixada">
     </div>
 
     <div class="info">
-      <h3>Boris Brejcha – Reflections Tour</h3>
+      <h3>Imagine Dragons – World Tour</h3>
       <p class="date">
         <span class="material-icons">event</span>
-        20/12/2025 • Curitiba
+        25/01/2026 • Arena da Baixada • Curitiba
+      </p>
+    </div>
+  </a>
+
+  <!-- CURITIBA – SHOW 2 -->
+  <a href="ex.html" class="card"
+     data-city="cur" data-type="show"
+     data-start="2026-02-10" data-end="2026-02-10"
+     data-event-id="5008" data-local-id="cur-est-02">
+
+    <div class="img-container">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/0/05/Couto_Pereira_Curitiba.jpg"
+           alt="Show no Estádio Couto Pereira">
+    </div>
+
+    <div class="info">
+      <h3>Guns N’ Roses – Latin America Tour</h3>
+      <p class="date">
+        <span class="material-icons">event</span>
+        10/02/2026 • Couto Pereira • Curitiba
       </p>
     </div>
   </a>
