--- a/index.html
+++ b/index.html
@@ -77,15 +77,48 @@
 </section>
 
 
-  <!-- SEÇÃO DE VÍDEO -->
-  <section id="video" class="video-section">
-    <div class="video-container">
-      <iframe src="https://www.youtube.com/embed/SEU_VIDEO_AQUI" title="Vídeo explicativo" frameborder="0" allowfullscreen></iframe>
-      <div class="video-text">
-        <h2>VEJA COMO É FÁCIL USAR<br>NOSSO SISTEMA</h2>
-      </div>
+  <section class="como-utilizar">
+  <div class="header">
+    <h2>Como utilizar</h2>
+    <p>
+      Todas as informações necessárias para a utilização estarão disponíveis
+      no seu e-mail, no site e também no aplicativo.
+    </p>
+  </div>
+
+  <div class="cards">
+    <div class="card">
+      <span class="step">01</span>
+      <div class="illustration">🚗</div>
+      <h3>Dirija-se ao estacionamento</h3>
+      <p>
+        Vá até o estacionamento selecionado e, caso exista uma entrada
+        específica para reservas, utilize-a corretamente.
+      </p>
     </div>
-  </section>
+
+    <div class="card">
+      <span class="step">02</span>
+      <div class="illustration">📱</div>
+      <h3>Apresente o QR Code</h3>
+      <p>
+        Aproxime o QR Code da sua reserva no leitor da cancela.
+        Não é necessário retirar o tíquete físico.
+      </p>
+    </div>
+
+    <div class="card">
+      <span class="step">03</span>
+      <div class="illustration">🅿️</div>
+      <h3>Estacione seu veículo</h3>
+      <p>
+        Após a liberação da entrada, escolha qualquer vaga disponível
+        e estacione normalmente.
+      </p>
+    </div>
+  </div>
+</section>
+
 
   <!-- SEÇÃO DE VANTAGENS -->
   <section id="vantagens" class="vantagens-section">
