--- a/reservas.html
+++ b/reservas.html
@@ -46,28 +46,28 @@
   </div>
 
  <section class="icon-grid">
-    <a href="eventos.html">
+    <a href="eventos1.html">
       <div class="item" id="hotel">
-        <img src="assets/hoteis-removebg-preview.png" alt="Hotel">
-        <span>Hotel</span>
+        <img src="assets/aviao-decolando.png" alt="Hotel">
+        <span>Aeropostos</span>
       </div>
     </a>
-    <a href="eventos.html">
+    <a href="eventos2.html">
       <div class="item" id="parque">
         <img src="assets/parque-removebg-preview.png" alt="Parque">
-        <span>Parque</span>
+        <span>Parques</span>
       </div>
     </a>
-    <a href="eventos.html">
+    <a href="eventos3.html">
       <div class="item" id="shopping">
         <img src="assets/online-shopping-removebg-preview.png" alt="Shopping">
-        <span>Shopping</span>
+        <span>Shopping`s</span>
       </div>
     </a>
-    <a href="eventos.html">
+    <a href="eventos4.html">
       <div class="item" id="estadio">
-        <img src="assets/estadio-removebg-preview.png" alt="Estádio">
-        <span>Estádio</span>
+        <img src="assets/show.png" alt="Estádio">
+        <span>Shows</span>
       </div>
     </a>
     <a href="eventos.html">
